src/objects/ScheduleDailyConfig__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T0000__c</fullName>
        <defaultValue>false</defaultValue>
        <label>00:00</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T0100__c</fullName>
        <defaultValue>false</defaultValue>
        <label>01:00</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T0200__c</fullName>
        <defaultValue>false</defaultValue>
        <label>02:00</label>
        <type>Checkbox</type>
    </fields>
    <label>Daily Schedule Config</label>
</CustomObject>